# linux_oled_monitor

./: CMakeLists.txt  _PWD_TEMP_  oled_monitor.sh
src/get_data/: CMakeLists.txt  cpu_data.c  cpu_data.h
src/lv_app/: CMakeLists.txt  component.mk  cpu_page.c  cpu_page.h  lv_app.c  lv_app.h  mainMenu.c  mainMenu.h  pagebase.c  pagebase.h
src/lv_app/images/: cpuload_image.c  cputemp_image.c  fdisk_image.c  mem_image.c
src/lvgl/: CMakeLists.txt  lv_conf.h
src/lvgl/lvgl/examples/anim/: lv_example_anim_2.c
src/lvgl/lvgl/examples/styles/: lv_example_style_7.c  lv_example_style_8.c
src/lvgl/lvgl/examples/widgets/arc/: lv_example_arc_2.c
src/lvgl/lvgl/examples/widgets/img/: lv_example_img_1.c
src/lvgl/lvgl/examples/widgets/spinner/: lv_example_spinner_1.c
src/lvgl/lvgl/src/extra/themes/mono/: lv_theme_mono.c
src/oled_driver/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  oled.c  oled.h  oled_demo.txt  oled_i2c.txt
